# FoxLang-C-Version

./: CMakeLists.txt  main.cpp
Lexer/: Lexer.cpp  Lexer.h
Lexer/Tokens/: BindingToken.cpp  BindingToken.h  Devsi.h  IdentificationToken.cpp  IdentificationToken.h  NumberToken.cpp  NumberToken.h  OperatorToken.cpp  OperatorToken.h  SymbolToken.cpp  SymbolToken.h  Token.cpp  Token.h  TokenType.h
